    bases. All these files selections have therefore been replaced by
    versions using hyperlinks.

* GeneWeb server or CGI (gwd)
  - [15 Jul 01] Improved alphabetical order of places in the display
    by places/surnames (code by Ludovic Ledieu).
  - [13 Jul 01] Fixed bug: in update person form, when clicking on
    "insert surname alias", the display became "insert first name alias".

* Gedcom to GeneWeb (ged2gwb)
  - [06 Jul 01] Fixed bug: sometimes failed when converting ansel text
    to ascii.

* Base configuration files (base.gwf)
  - [28 Jun 01] Added variable "hide_private_names". If set (i.e. if
    the value is "yes"), the names of the private persons (less than 150
    years) are not displayed: "x x" is displayed instead. To see the real
    names, one must be "wizard" or "friend".

GeneWeb version 4.02
--------------------

* GeneWeb server or CGI (gwd)
  - [15 Jun 01] Fixed bug in merging families: if there were a key
    conflict in one person, the button "Create" proposing to select a
    fresh key number did not work.
  - [12 Jun 01] In case of deleted families, the list of the latest
    marriages worked bad.
  - [07 Jun 01] (technical point) fixed problem: in case when the data
    base is not writable, there was no answer. Now an error message is
    displayed.
  - [02 Jun 01] Fixed bug: in family form, if surnames contained
    double quotes, they were incorrectly displayed.
  - [29 May 01] Fixed problem with option -log (traces in a log file):
    if the log file was not writable, all requests failed (instead of
    ignoring it).
  - [11 May 01] Improved data base access speed in case when many updates
    have been done (and data base not having been cleaned up).
  - [09 May 01] Fixed bug: system images with underscores did not work
    (may happen in cases of customization of the welcome page)
  - [09 May 01] Fixed bug: in family update form, if the comment
    contained quotes, the text was truncated.